# refcheck

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
refcheck/: __init__.py  checker.py  cli.py  config.py  output.py  rules.py  suggestions.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_rules.py  test_suggestions.py
